After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768780 - O_PATH is a non-standard flag which may be unavailable on non-Linux systems
O_PATH is a non-standard flag which may be unavailable on non-Linux systems
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.49.x
Other FreeBSD
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-07-13 16:02 UTC by Ting-Wei Lan
Modified: 2016-07-13 16:38 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ting-Wei Lan 2016-07-13 16:02:59 UTC
GLib fails to build on FreeBSD because of commit 62bd8f5:

gio/gdocumentportal.c:105:22: error: use of undeclared identifier 'O_PATH'
  fd = g_open (path, O_PATH | O_CLOEXEC);
                     ^
1 error generated.