documents portal: Make sure O_PATH is defined

FreeBSD doesn't have it.

https://bugzilla.gnome.org/show_bug.cgi?id=768780